--- a/style/index.css
+++ b/style/index.css
@@ -49,6 +49,7 @@ table {
 * {
     max-width: 100%;
     font-size: 62.5%;
+    font-family: 'Noto Serif', serif;
 }
 
 header {
@@ -66,6 +67,7 @@ header {
 
 .name, .intro {
     font-size: 3.6rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 .navigation, .blurb {
